--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "porcelet"
-author = "Will Buik"
+authors = ["Will Buik"]
 version = "0.1.0"
 edition = "2021"
 
@@ -9,5 +9,8 @@ edition = "2021"
 [dependencies]
 anyhow = "1"
 clap = { version = "3.2", features = ["derive"] }
+env_logger = "0.9.0"
 log = "0.4"
+thiserror = "1.0"
 tokio = { version = "1", features = ["full"] }
+windows-service = "0.4.0"
